@@ -1,3 +1,8 @@
+2004-02-19  David Schleef  <ds@schleef.org>
+
+	* gst/gstinfo.h:  Copy G_STRFUNC implementation from glib-2.4
+	and use it for GST_FUNCTION.  (bug #134750)
+
 2004-02-19  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* po/fr.po:
